Slight fix with portfolioItems page, minor cosmetic fix on heading text alignment

--- a/src/styles/portfolioItem.module.scss
+++ b/src/styles/portfolioItem.module.scss
@@ -26,6 +26,10 @@
 
     .portfolio-heading-container {
         min-height: 16vh !important;
+
+        p {
+            text-align: center !important;
+        }
     }
 
     .project-details {
